# spotify-server

./: .gitignore  .gitmodules  .spotify_token_cache.json  Cargo.toml
src/: control.rs  data.rs  error.rs  list.rs  main.rs  queue.rs  spotify.rs  utils.rs
src/spotify/: auth.rs  cache.rs
src/spotify/auth/: server_handler.rs
