[package]
name = "spotify-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
futures = "0.3.32"
librespot = "0.8.0"
rand = { version = "0.10.1", features = ["thread_rng"] }
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["fs", "rt-multi-thread", "sync"] }
url = "2.5.8"
urlencoding = "2.1.3"
