[package]
name = "spotify-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-sqlite = "0.5.7"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
derive_more = { version = "2.1.1", features = ["full"] }
futures = "0.3.32"
http = "1.4.0"
httparse = "1.10.1"
librespot = "0.8.0"
reqwest = { version = "0.13.2", features = ["form", "json"] }
rspotify = { path = "vendor/rspotify", features = ["cli"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["fs", "rt-multi-thread", "sync"] }
url = "2.5.8"
urlencoding = "2.1.3"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"

# [patch.crates-io]
# rspotify = { path = "vendor/rspotify/"}
# librespot = { path = "vendor/librespot/"}
